--- a/templates/results.HTML
+++ b/templates/results.HTML
@@ -23,20 +23,7 @@
     <section id="search">
         <div class="row">
             <div class="col-sm-12 my-auto bg-dark">
-                <form class="container p-3 my-3 bg-transparent text-dark col-sm-5 rounded h-50">
-                    <div style="padding-top: 30px;"></div>
-                    <div class="form-group card-block w-30 mx-auto">
-                        <label for="name"><strong>Search</strong></label>
-                        <input type="text" class="form-control" id="anime_name" aria-describedby="emailHelp" placeholder="Enter Name of Movie">
-                    </div>
-                    <div class="card card-block w-25 mx-auto bg-dark">
-                        <button type="search" class="btn btn-primary">Search</button>
-                    </div>
-                    <div style="padding-top: 50px;"></div>
-                    <div class="card card-block mx-auto bg-success">
-                        <button type="recommend" class="btn btn-success">Recommend Movies</button>
-                    </div>
-                </form>
+                <h2 class="text-white" style="padding: 1%; text-align: center;"><strong>IMRDb</strong> Recommendations</h2>
             </div>
         </div>
     </section>
@@ -48,7 +35,6 @@
                     <img class="card-img-top" src="placeholder.png" alt="Card image cap" width="200" height="300">
                     <div class="card-body">
                         <p class="card-text text-white"><strong>Movie Title</strong></p>
-                        <button class="btn btn-lg btn-block btn-primary bg-primary" type="button">Rate this movie</button>
                     </div>
                 </div>
             </div>
@@ -57,7 +43,6 @@
                     <img class="card-img-top" src="placeholder.png" alt="Card image cap" width="200" height="300">
                     <div class="card-body">
                         <p class="card-text text-white"><strong>Movie Title</strong></p>
-                        <button class="btn btn-lg btn-block btn-primary bg-primary" type="button">Rate this movie</button>
                     </div>
                 </div>
             </div>
@@ -66,7 +51,6 @@
                     <img class="card-img-top" src="placeholder.png" alt="Card image cap" width="200" height="300">
                     <div class="card-body">
                         <p class="card-text text-white"><strong>Movie Title</strong></p>
-                        <button class="btn btn-lg btn-block btn-primary bg-primary" type="button">Rate this movie</button>
                     </div>
                 </div>
             </div>
@@ -75,7 +59,6 @@
                     <img class="card-img-top" src="placeholder.png" alt="Card image cap" width="200" height="300">
                     <div class="card-body">
                         <p class="card-text text-white"><strong>Movie Title</strong></p>
-                        <button class="btn btn-lg btn-block btn-primary bg-primary" type="button">Rate this movie</button>
                     </div>
                 </div>
             </div>
@@ -84,7 +67,6 @@
                     <img class="card-img-top" src="placeholder.png" alt="Card image cap" width="200" height="300">
                     <div class="card-body">
                         <p class="card-text text-white"><strong>Movie Title</strong></p>
-                        <button class="btn btn-lg btn-block btn-primary bg-primary" type="button">Rate this movie</button>
                     </div>
                 </div>
             </div>
@@ -93,7 +75,6 @@
                     <img class="card-img-top" src="placeholder.png" alt="Card image cap" width="200" height="300">
                     <div class="card-body">
                         <p class="card-text text-white"><strong>Movie Title</strong></p>
-                        <button class="btn btn-lg btn-block btn-primary bg-primary" type="button">Rate this movie</button>
                     </div>
                 </div>
             </div>
