--- a/imrdb/mainpage/templates/mainpage/index.HTML
+++ b/imrdb/mainpage/templates/mainpage/index.HTML
@@ -77,25 +77,31 @@
         </div>
     </section>
 
-    {% if movies.has_other_pages %}
-    <ul class="pagination" style="padding: 1%;">
+    <nav aria-label="Page navigation">   <ul class="pagination">
         {% if movies.has_previous %}
-        <li><a href="?page={{ movies.previous_page_number }}">&laquo;</a></li>
-        {% else %}
-        <li class="disabled"><span>&laquo;</span></li>
-        {% endif %}
-        {% for i in movies.paginator.page_range %}
-        {% if movies.number == i %}
-            <li class="active" style="padding: 1%;"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
-        {% else %}
-            <li><a href="?page={{ i }}">{{ i }}</a></li>
-        {% endif %}
+        <li class="page-item">
+          <a class="page-link" href="?page=1" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+            <span class="sr-only">begin</span>
+          </a>
+        </li>   {% endif %}
+        
+        {% for n in movies.paginator.page_range %}
+          {% if movies.number == n %}
+            <li class="page-item active">
+              <span class="page-link">{{ n }}<span class="sr-only">(current)</span></span>
+            </li>
+          {% elif n > movies.number|add:'-3' and n < movies.number|add:'3' %}
+            <li class="page-item"><a class="page-link" href="?page={{ n }}">{{ n }}</a></li>
+          {% endif %}
         {% endfor %}
+        
         {% if movies.has_next %}
-        <li style="padding: 1%;"><a href="?page={{ movies.next_page_number }}">&raquo;</a></li>
-        {% else %}
-        <li class="disabled" style="padding: 1%;"><span>&raquo;</span></li>
-        {% endif %}
-    </ul>
-    {% endif %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ movies.paginator.num_pages }}" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+              <span class="sr-only">end</span>
+            </a>
+          </li>
+          {% endif %}   </ul> </nav>
 </body>
