--- a/imrdb/mainpage/templates/mainpage/index.HTML
+++ b/imrdb/mainpage/templates/mainpage/index.HTML
@@ -33,24 +33,24 @@
                 <form class="container p-3 my-3 bg-transparent text-dark col-sm-5 rounded h-50">
                     <div style="padding-top: 30px;"></div>
                     <form method="GET">
-                    <div class="form-group card-block w-30 mx-auto">
-                        <label for="name"><strong>Search</strong></label>
-                        <input type="text" class="form-control" name="q" value="{{ request.GET.q }}" id="anime_name" aria-describedby="emailHelp" placeholder="Enter Name of Movie">
-                    </div>
+                        <div class="form-group card-block w-30 mx-auto">
+                            <label for="name"><strong>Search</strong></label>
+                            <input type="text" class="form-control" name="q" value="{{ request.GET.q }}" id="anime_name" aria-describedby="emailHelp" placeholder="Enter Name of Movie">
+                        </div>
+                        <div class="card card-block w-25 mx-auto bg-dark">
+                            <button type="search" class="btn btn-primary">Search</button>
+                        </div>
                     </form>
-                    <div class="card card-block w-25 mx-auto bg-dark">
-                        <button type="search" class="btn btn-primary">Search</button>
-                    </div>
                     <div style="padding-top: 50px;"></div>
-                    <div class="card card-block mx-auto bg-secondary">
+                    <div class="card card-block mx-5 bg-secondary">
                         <button type="recommend" class="btn btn-secondary" onclick="location.href='{% url 'rated' %}'">Rated Movies</button>
                     </div>
                     <div style="padding-top: 20px;"></div>
                     <form method="POST">
-                    <div class="card card-block mx-auto bg-success">
-                        {% csrf_token %}
-                        <button type="recommend" class="btn btn-success">Recommend Movies</button>
-                    </div>
+                        <div class="card card-block mx-5 bg-success">
+                            {% csrf_token %}
+                            <button type="recommend" class="btn btn-success">Recommend Movies</button>
+                        </div>
                     </form>
                 </form>
             </div>
@@ -63,8 +63,7 @@
             <div class="pricing-col col-lg-3 col-md-4" , style="padding: 20px;">
                 <div class="card bg-dark">
                     {% if m.image_url %}
-                    <img class="card-img-top" src="{{ m.image_url }}" alt="Card image cap" width="200" height="300">
-                    {% endif %}
+                    <img class="card-img-top" src="{{ m.image_url }}" alt="Card image cap" width="200" height="300"> {% endif %}
                     <div class="card-body">
                         <p class="card-text text-white"><strong>{{ m.name }}</strong></p>
                         {% load ratings %}
@@ -83,15 +82,12 @@
         <li><a href="?page={{ movies.previous_page_number }}">&laquo;</a></li>
         {% else %}
         <li class="disabled"><span>&laquo;</span></li>
-        {% endif %}
-        {% for i in movies.paginator.page_range %}
-        {% if movies.number == i %}
-            <li class="active" style="padding: 1%;"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+        {% endif %} {% for i in movies.paginator.page_range %} {% if movies.number == i %}
+        <li class="active" style="padding: 1%;"><span>{{ i }} <span class="sr-only">(current)</span></span>
+        </li>
         {% else %}
-            <li><a href="?page={{ i }}">{{ i }}</a></li>
-        {% endif %}
-        {% endfor %}
-        {% if movies.has_next %}
+        <li><a href="?page={{ i }}">{{ i }}</a></li>
+        {% endif %} {% endfor %} {% if movies.has_next %}
         <li style="padding: 1%;"><a href="?page={{ movies.next_page_number }}">&raquo;</a></li>
         {% else %}
         <li class="disabled" style="padding: 1%;"><span>&raquo;</span></li>
