--- a/templates/index.HTML
+++ b/templates/index.HTML
@@ -33,6 +33,10 @@
                         <button type="search" class="btn btn-primary">Search</button>
                     </div>
                     <div style="padding-top: 50px;"></div>
+                    <div class="card card-block mx-auto bg-secondary">
+                        <button type="recommend" class="btn btn-secondary">Rated Movies</button>
+                    </div>
+                    <div style="padding-top: 20px;"></div>
                     <div class="card card-block mx-auto bg-success">
                         <button type="recommend" class="btn btn-success">Recommend Movies</button>
                     </div>
