fixed windows issue

--- a/imrdb/mainpage/templates/mainpage/index.HTML
+++ b/imrdb/mainpage/templates/mainpage/index.HTML
@@ -25,6 +25,12 @@
     <title>IMRDb</title>
 </head>
 
+<style>
+  .star-ratings-rating-average, .star-ratings-rating-count, .star-ratings-rating-user {
+      display: none;
+  }
+  </style>
+
 <body style="background-size: cover; background-position: center; background-repeat: no-repeat;">
 
     <section id="search">
