--- a/templates/rated.HTML
+++ b/templates/rated.HTML
@@ -20,7 +20,8 @@
 
 <body style="background-size: cover; background-position: center; background-repeat: no-repeat;">
     <div class="jumbotron bg-dark text-white">
-        <h1>Movies Rated by You</h1>
+        <center><img src="logo.png" alt="logo"></center>
+    <center><h1>Movies Rated by You</h1></center>
     </div>
     <div style="padding-top: 30px;"></div>
     <div class="container">
