--- a/templates/results.HTML
+++ b/templates/results.HTML
@@ -23,6 +23,7 @@
     <section id="search">
         <div class="row">
             <div class="col-sm-12 my-auto bg-dark">
+                <center><img src="logo.png" alt="logo"></center>
                 <h2 class="text-white" style="padding: 1%; text-align: center;"><strong>IMRDb</strong> Recommendations</h2>
             </div>
         </div>
