--- a/imrdb/mainpage/templates/mainpage/results.html
+++ b/imrdb/mainpage/templates/mainpage/results.html
@@ -24,6 +24,7 @@
         <section id="search">
             <div class="row">
                 <div class="col-sm-12 my-auto bg-dark">
+                    <center><img src="{% static 'logo.png' %}" alt="logo" onclick="location.href='{% url 'home' %}'"></center>
                     <h2 class="text-white" style="padding: 1%; text-align: center;"><strong>IMRDb</strong> Recommendations</h2>
                 </div>
             </div>
