--- a/templates/index.HTML
+++ b/templates/index.HTML
@@ -25,6 +25,7 @@
             <div class="col-sm-12 my-auto bg-dark">
                 <form class="container p-3 my-3 bg-transparent text-dark col-sm-5 rounded h-50">
                     <div style="padding-top: 20px;"></div>
+                    <center><img src="logo.png" alt="logo"></center>
                     <div class="form-group card-block w-30 mx-auto">
                         <label for="name"><strong>Search</strong></label>
                         <input type="text" class="form-control" id="anime_name" aria-describedby="emailHelp" placeholder="Enter Name of Movie">
